Fix drawer content being more squished than needed

--- a/frontend/src/components/drawer/drawer.module.scss
+++ b/frontend/src/components/drawer/drawer.module.scss
@@ -20,6 +20,6 @@
     }
 
     .content {
-        grid-area: 2 / 2;
+        grid-area: 2 / 2 / 3 / 4;
     }
 }
